Added AD logout

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -28,5 +28,6 @@
 <body>
     <h1>Welcome <span id="username"></span></h1>
     <p>Your roles: <span id="userroles"></span></p>
+    <p><a href="/auth/logout">Logout</a></p>
 </body>
 </html>
